{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1251,
  "lineage": "aa16ad23-5ca4-c483-2c25-7ef45f535913",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/6c884c52a1924de3",
            "arn_suffix": "app/test-alb/6c884c52a1924de3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-alb-1588498015.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/6c884c52a1924de3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fcd63643a34a264c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a8e70678412fad4f"
              },
              {
                "subnet_id": "subnet-0edc93419ee152a74"
              }
            ],
            "subnets": [
              "subnet-0a8e70678412fad4f",
              "subnet-0edc93419ee152a74"
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b849acacc90a24e4",
            "arn": "arn:aws:ec2:eu-west-1:050451389344:elastic-ip/eipalloc-0b849acacc90a24e4",
            "association_id": "eipassoc-059625428e531cbea",
            "domain": "vpc",
            "id": "eipalloc-0b849acacc90a24e4",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-034d1ea843ef0dee2",
            "private_dns": "ip-10-0-22-24.eu-west-1.compute.internal",
            "private_ip": "10.0.22.24",
            "public_dns": "ec2-34-249-154-213.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.154.213",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:internet-gateway/igw-03adcdf15663d31bf",
            "id": "igw-03adcdf15663d31bf",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/6c884c52a1924de3/a4bab1481274e7f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/6d22143ed7b2dda7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/6c884c52a1924de3/a4bab1481274e7f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/6c884c52a1924de3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/6d22143ed7b2dda7",
            "arn_suffix": "targetgroup/test-tg/6d22143ed7b2dda7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/6d22143ed7b2dda7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/6c884c52a1924de3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b849acacc90a24e4",
            "association_id": "eipassoc-059625428e531cbea",
            "connectivity_type": "public",
            "id": "nat-02defcd736f7f5812",
            "network_interface_id": "eni-034d1ea843ef0dee2",
            "private_ip": "10.0.22.24",
            "public_ip": "34.249.154.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8e70678412fad4f",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086d3e7cfdab7ec431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02defcd736f7f5812",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086d3e7cfdab7ec43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03adcdf15663d31bf",
            "id": "r-rtb-0d7eb1ea6d27a5b661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7eb1ea6d27a5b66",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-086d3e7cfdab7ec43",
            "id": "rtb-086d3e7cfdab7ec43",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02defcd736f7f5812",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-0d7eb1ea6d27a5b66",
            "id": "rtb-0d7eb1ea6d27a5b66",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03adcdf15663d31bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b2113f055dc6e36",
            "route_table_id": "rtb-086d3e7cfdab7ec43",
            "subnet_id": "subnet-09cdd5fefa85c999b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bb625d9d70055b7",
            "route_table_id": "rtb-086d3e7cfdab7ec43",
            "subnet_id": "subnet-077fe3cae7042d595"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59b575eee061be8",
            "route_table_id": "rtb-0d7eb1ea6d27a5b66",
            "subnet_id": "subnet-0a8e70678412fad4f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc33d918d7caf45",
            "route_table_id": "rtb-0d7eb1ea6d27a5b66",
            "subnet_id": "subnet-0edc93419ee152a74"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0fcd63643a34a264c",
            "description": "Security group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcd63643a34a264c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd2bf0c94b554e4b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg-alb",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0bd2bf0c94b554e4b",
            "description": "Security group for api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from api",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd2bf0c94b554e4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https inbound traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-sg-api",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0bffae76873b96066",
            "description": "Security group for ecs app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bffae76873b96066",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fcd63643a34a264c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demo-sg-ecs",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-07892d5e2f11f8c45",
            "description": "Security group for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07892d5e2f11f8c45",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bffae76873b96066"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo-sg-rds",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-09cdd5fefa85c999b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cdd5fefa85c999b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-077fe3cae7042d595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077fe3cae7042d595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0a8e70678412fad4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8e70678412fad4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0edc93419ee152a74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc93419ee152a74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0819d5efb2297df6c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:vpc/vpc-0819d5efb2297df6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004ab840a3e7013b3",
            "default_route_table_id": "rtb-04092a48990fe5b53",
            "default_security_group_id": "sg-0c23290e7eef61cc9",
            "dhcp_options_id": "dopt-00a37dc63cbc985bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0819d5efb2297df6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04092a48990fe5b53",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0f93da29c06caab70",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-0f93da29c06caab70",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fcd63643a34a264c",
            "security_group_rule_id": "sgr-0f93da29c06caab70",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-05c5d1a52b92f6913",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from api",
            "from_port": null,
            "id": "sgr-05c5d1a52b92f6913",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bd2bf0c94b554e4b",
            "security_group_rule_id": "sgr-05c5d1a52b92f6913",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0597a1b4b2ed38789",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from ECS",
            "from_port": null,
            "id": "sgr-0597a1b4b2ed38789",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bffae76873b96066",
            "security_group_rule_id": "sgr-0597a1b4b2ed38789",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-06c2959695be7d60c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-06c2959695be7d60c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07892d5e2f11f8c45",
            "security_group_rule_id": "sgr-06c2959695be7d60c",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0b25a9a1d7b3ecf87",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-0b25a9a1d7b3ecf87",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bd2bf0c94b554e4b",
            "security_group_id": "sg-0fcd63643a34a264c",
            "security_group_rule_id": "sgr-0b25a9a1d7b3ecf87",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-04399e0833f23fba7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-04399e0833f23fba7",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bd2bf0c94b554e4b",
            "security_group_rule_id": "sgr-04399e0833f23fba7",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-08a8ee5e9c0325632",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow https inbound traffic from internet",
            "from_port": 443,
            "id": "sgr-08a8ee5e9c0325632",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bd2bf0c94b554e4b",
            "security_group_rule_id": "sgr-08a8ee5e9c0325632",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-089e03067dbdd6447",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": null,
            "id": "sgr-089e03067dbdd6447",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fcd63643a34a264c",
            "security_group_id": "sg-0bffae76873b96066",
            "security_group_rule_id": "sgr-089e03067dbdd6447",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-021476d509335d5dd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 5432,
            "id": "sgr-021476d509335d5dd",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bffae76873b96066",
            "security_group_id": "sg-07892d5e2f11f8c45",
            "security_group_rule_id": "sgr-021476d509335d5dd",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}